--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -10,17 +10,43 @@
     padding: 100px 0;
     background-color: #E9E7E4;
 
-    &__content-wrapper {
+    &__container, &__container--with-panel {
         width: $width-mb;
         padding: 0 $padding-mb;
     }
+    &__container { margin-top: 150px; }
+    &__container:first-of-type { margin-top: 100px; }
 
-    &__panel { text-align: center; }
+    &__panel { text-align: center; margin-bottom: 100px; }
 
     &__title {
+        text-align: center;
         font-size: $title-mb;
         font-family: "Roboto Medium", Arial, Helvetica, sans-serif;
         color: #E04539;
+    }
+
+    &__subtitle {
+        overflow: hidden;
+        margin-bottom: 50px;
+
+        text-align: left;
+        font-size: $subtitle-mb;
+        font-family: "Roboto Medium", Arial, Helvetica, sans-serif;
+
+        &:after {
+            content: "";
+
+            width: 100%;
+            margin-right: -100%;
+
+            display: inline-block;
+            vertical-align: middle;
+            position: relative;
+            right: -14px;
+
+            border-bottom: 3px solid #E04539;
+        }
     }
 
     &__nav-category {
@@ -29,7 +55,8 @@
         font-size: $subtitle-mb;
     }
 
-    &__content { margin-top: 100px; padding-bottom: 100px; border-bottom: 3px solid #E04539; }
+    &__content-wrapper { margin-top: 100px; }
+    &__content { padding-bottom: 100px; border-bottom: 3px solid #E04539; }
 }
 
 .nav-category {
@@ -63,23 +90,26 @@
 
 @media (min-width: $width-tb) {
     .main {
-        &__content-wrapper { width: $width-tb; padding: 0 $padding-tb; }
+        &__container, &__container--with-panel { width: $width-tb; padding: 0 $padding-tb; }
         &__title { font-size: $title-tb; }
+        &__subtitle { font-size: $subtitle-tb; }
         &__nav-category { font-size: $subtitle-tb; }
     }
     .nav-category { width: 518px; }
 }
 @media (min-width: $width-pc) {
     .main {
-        &__content-wrapper {
+        &__container, &__container--with-panel {
             width: 100%;
             max-width: $max-width-pc;
             padding: 0 $padding-pc;
-
+        }
+        &__container--with-panel {
             align-items: flex-start;
             display: flex;
-            // flex-wrap: wrap;
             position: relative;
+
+            & .main__title { text-align:  left; }
         }
         &__panel {
             flex: none;
@@ -89,8 +119,9 @@
             text-align: left;
         }
         &__title { font-size: $title-pc; }
+        &__subtitle { font-size: $subtitle-pc; }
         &__nav-category { font-size: $subtitle-pc; width: auto; }
-        &__content { flex: 2; margin: 0; }
+        &__content { flex: 2; }
     }
     .nav-category {
         &__item, &__item--selected { justify-content: left; }
