--- a/public/nullstyle.css
+++ b/public/nullstyle.css
@@ -24,15 +24,15 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
     font-style: normal;
     font-weight: 400;
     src: local("Roboto Regular"),
-        url("./fonts/Roboto-Regular.woff2") format("woff2"),
-        url("./fonts/Roboto-Regular.woff") format("woff");
+        url("/fonts/Roboto-Regular.woff2") format("woff2"),
+        url("/fonts/Roboto-Regular.woff") format("woff");
 }
 @font-face {
     font-family: "Roboto Medium";
     font-style: normal;
     font-weight: 400;
     src: local("Roboto Medium"),
-        url("./fonts/Roboto-Medium.woff2") format("woff2"),
-        url("./fonts/Roboto-Medium.woff") format("woff");
+        url("/fonts/Roboto-Medium.woff2") format("woff2"),
+        url("/fonts/Roboto-Medium.woff") format("woff");
 }
 /*--------------------*/
